5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1595_1571.log
== TEST (2019-03-23 23:41:10) 
-- CODE:
var = input ("eu sou feio")
print.upper (var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper (var)
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:43:02) 
-- CODE:
var = input ("eu sou feio")
print (upper.var())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (upper.var())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:43:27) 
-- CODE:
var = "eu sou feio"
print (upper.var())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (upper.var())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:43:45) 
-- CODE:
texto = "eu sou feio"
print(upper.var())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper.var())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:44:06) 
-- CODE:
texto = "eu sou feio"
print(upper.texto())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper.texto())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:44:26) 
-- CODE:
texto = "eu sou feio"
print(upper.texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper.texto)
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:46:43) 
-- CODE:
texto = "eu sou feio"
print(texto.upper())
-- OUTPUT:
EU SOU FEIO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:46:45) 
-- CODE:
texto = "eu sou feio"
print(texto.upper())
-- EXECUTION TIME:
0.154861
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
EU SOU FEIO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:47:20) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:47:22) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- EXECUTION TIME:
0.121344
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:48:06) 
-- CODE:
texto =("eu sou feio")
print(texto.upper())
-- OUTPUT:
EU SOU FEIO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:48:07) 
-- CODE:
texto =("eu sou feio")
print(texto.upper())
-- EXECUTION TIME:
0.170194
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
EU SOU FEIO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:48:37) 
-- CODE:
texto =(" eu sou feio ")
print(texto.upper())
-- OUTPUT:
EU SOU FEIO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:48:39) 
-- CODE:
texto =(" eu sou feio ")
print(texto.upper())
-- EXECUTION TIME:
0.262024
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
EU SOU FEIO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:48:45) 
-- CODE:
texto = (" eu sou feio ")
print(texto.upper())
-- OUTPUT:
EU SOU FEIO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:48:46) 
-- CODE:
texto = (" eu sou feio ")
print(texto.upper())
-- EXECUTION TIME:
0.167259
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
EU SOU FEIO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:48:57) 
-- CODE:
texto = (" Guido van Rossum criou o Python ")
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:48:59) 
-- CODE:
texto = (" Guido van Rossum criou o Python ")
print(texto.upper())
-- EXECUTION TIME:
0.128437
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:49:55) 
-- CODE:
texto = "carlos e feio"
print(texto.upper())
-- OUTPUT:
CARLOS E FEIO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:49:56) 
-- CODE:
texto = "carlos e feio"
print(texto.upper())
-- EXECUTION TIME:
0.172981
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
CARLOS E FEIO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:50:37) 
-- CODE:
texto = input("digete a frase :")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:50:47) 
-- CODE:
texto = input("digete a frase :")
print(texto.upper())
-- EXECUTION TIME:
0.194535
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
